[2025-04-05 09:56:18]	No se encontró una version válida	Android Manifest con mas permisos
[2025-04-06 18:02:25]	No se encontró una version válida	Algunas mejoras en la vista de Calc
[2025-04-07 09:42:03]	No se encontró una version válida	Automatic update
[2025-04-07 17:19:02]	No se encontró una version válida	Snackbar funcionado en MainActivity
[2025-04-07 22:38:56]	No se encontró una version válida	Nuevo lapiz SI se pinta en Calc
[2025-04-07 23:44:39]	No se encontró una version válida	Colores de botones en CALC [OK]
[2025-04-08 17:57:18]	No se encontró una version válida	Utilities PS1
[2025-04-08 17:57:58]	No se encontró una version válida	Automatic update
[2025-04-09 19:21:19]	No se encontró una version válida	Automatic update
[2025-04-10 10:57:23]	No se encontró una version válida	list.ps1 parcheado
[2025-04-10 13:26:21]	No se encontró una version válida	Antes de cambios
[2025-04-10 13:57:22]	No se encontró una version válida	Automatic update
[2025-04-10 18:37:22]	No se encontró una version válida	Reparada vista Documento
[2025-04-10 21:59:25]	No se encontró una version válida	Varias pantallas mas funcionales
[2025-04-11 18:14:59]	No se encontró una version válida	Automatic update
[2025-04-11 19:49:54]	No se encontró una version válida	Previo refactoring de toolbar
[2025-04-12 09:39:22]	No se encontró una version válida	Solucionado problema navbar en calc
[2025-04-12 09:49:03]	No se encontró una version válida	Navbar superior de calc refactorizado
[2025-04-12 10:58:57]	No se encontró una version válida	Vista Cart (unestable)
[2025-04-12 13:49:47]	No se encontró una version válida	New assets
[2025-04-12 13:51:52]	No se encontró una version válida	CartItem .kt
[2025-04-12 13:53:16]	No se encontró una version válida	Refactoring: CartAdpter movido
[2025-04-12 14:36:37]	No se encontró una version válida	Algunas variaciones del teclado
[2025-04-13 20:52:53]	No se encontró una version válida	Solucion a problema en tiempo de ejecucion por error de casting en Calc